fix: move overflow to parent

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -176,6 +176,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  overflow: hidden;
   vertical-align: middle;
   padding: 12px;
   color: $light-gray;
@@ -233,8 +234,6 @@
 .sb-sidebar-link-inner {
   display: flex;
   align-items: center;
-  overflow: hidden;
-  min-width: 48px;
 }
 
 // modifiers
